# frame

./: .gitignore  CLAUDE.md  README.md  REFACTORING_PHASE1_GUIDE.md  REFACTORING_RECOMMENDATIONS.md  SOUNDNESS_BUGS_FOUND.md  SOUNDNESS_FIXES_SUMMARY.md  debug_hierarchical.py  debug_lso.py  debug_nll.py  pyproject.toml  qf_ax_benchmark_results.json  qf_bv_benchmark_results.json  rebalance_slcomp_curated.py  requirements-dev.txt  requirements.txt  run_qf_ax_benchmarks.py  run_qf_bv_benchmarks.py  test_lso_unfold.py  test_proposals.py
.github/workflows/: tests.yml
benchmarks/: README.md  __main__.py  _slcomp_formulas.py  _slcomp_functions.py  _slcomp_predicates.py  _slcomp_terms.py  _slcomp_utils.py  _smtlib_regex_parser.py  orchestrator.py  runner.py  slcomp_parser.py  smtlib_parser.py  smtlib_string_parser.py
benchmarks/commands/: __init__.py  analyze_cmd.py  download_cmd.py  run_cmd.py  visualize_cmd.py
benchmarks/core/: __init__.py  analysis.py  base_runner.py  result.py  sast_result.py  sast_runner.py
benchmarks/curators/: __init__.py  samplers.py
benchmarks/cve_bench/: README.md  results.json
benchmarks/downloaders/: __init__.py  _qf_s_benchmark_data.py  issueblot.py  js_sast.py  juliet.py  owasp_java.py  owasp_python.py  qf_ax.py  qf_bv.py  qf_s.py  secbench_js.py  secbench_real.py  slcomp.py  utils.py
benchmarks/endor_corpus/: .gitignore  (+37 more)
frame/: __init__.py  __main__.py  cli.py
tests/: framework_helpers.py  test_agent_compaction.py  test_arithmetic_check.py  test_arithmetic_lemmas.py  test_arithmetic_synth.py  test_array_bitvector_regression.py  test_array_regression.py  test_array_theory.py  test_base_computation.py  test_base_guided_folding.py  test_basic.py  test_benchmark_failures.py  test_benchmark_refactoring.py  test_biabduction.py  test_bitvector_advanced.py  test_bitvector_operations.py  test_bitvector_regression.py  test_bitvector_theory.py  test_c_buffer_bounds.py  test_c_heap_lifecycle.py  test_c_numeric_defects.py  test_c_ownership_lifetime.py  test_cli.py  test_cli_exploit.py  test_cli_sarif_flags.py  test_compose.py  test_cross_theory_integration.py  test_cwe134_format_string.py  test_cwe190_detection.py  test_cwe321.py  test_cwe369_divide_by_zero.py  test_cwe476_detection.py  test_cwe78_detection.py  test_cwe_122_124.py  test_cwe_126_127.py  test_cwe_taxonomy.py  test_cyclic_proof_improvements.py  test_edge_cases.py  test_encoder_checker.py  test_endor_corpus.py  (+83 more)
writeup/: README.md  frame-ai-sast.md  gen_figures.py
(+177 files in other folders)
