[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frame"
version = "0.0.1"
description = "Frame - Separation Logic Verification Tool with Security Scanning"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "codelion"}
]
keywords = [
    "separation-logic",
    "formal-verification",
    "security",
    "static-analysis",
    "vulnerability-detection",
    "smt",
    "z3"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "z3-solver>=4.8.0",
]

[project.optional-dependencies]
scan = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "requests>=2.25.0",
    "zstandard>=0.22.0",
]
all = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "requests>=2.25.0",
    "zstandard>=0.22.0",
]

[project.scripts]
frame = "frame.cli:main"

[project.urls]
Homepage = "https://github.com/lambdasec/frame"
Documentation = "https://github.com/lambdasec/frame#readme"
Repository = "https://github.com/lambdasec/frame"
Issues = "https://github.com/lambdasec/frame/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["frame*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["frame"]
omit = ["tests/*", "benchmarks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
